tests/snapshots/config__credential_all_fields.snap
---
source: tests/config.rs
expression: cred
---
id: full-cred
provider: openai
api_key: sk-comprehensive-key
base_url: "https://custom.openai.proxy.com"
organization: org-example-123
allowed_models:
  - gpt-4
  - gpt-4-turbo
priority: 15
daily_quota: 10000
rate_limit: 60
